--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+nix = { version = "0.27", features = ["user"] }
+
 [dev-dependencies]
 tempfile = "3.8"
 assert_cmd = "2.0"
