--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,5 @@ nix = { version = "0.27", features = ["user"] }
 tempfile = "3.8"
 assert_cmd = "2.0"
 predicates = "3.0"
+serial_test = "3.0"
+libc = "0.2"
