--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
 dirs = "6.0.0"
+hyper-rustls = "0.27.7"
+tls-parser = "0.12.2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 nix = { version = "0.27", features = ["user"] }
