--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde_json = "1.0"
 dirs = "6.0.0"
 hyper-rustls = "0.27.7"
 tls-parser = "0.12.2"
+camino = "1.1.11"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 nix = { version = "0.27", features = ["user"] }
