--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,9 +56,6 @@ jobs:
       - name: Run smoke tests
         run: cargo test --test smoke_test --verbose
 
-      - name: Run weak mode tests
-        run: cargo test --test weak_integration --verbose
-
       - name: Run macOS integration tests (with sudo)
         run: |
           # The tests require root privileges for PF rules on macOS
@@ -113,9 +110,6 @@ jobs:
       - name: Run smoke tests
         run: cargo test --test smoke_test --verbose
 
-      - name: Run weak mode tests
-        run: cargo test --test weak_integration --verbose
-
       - name: Run jail integration tests
         run: cargo test --test jail_integration --verbose
 
@@ -125,6 +119,48 @@ jobs:
           sudo ip netns list || true
           # Run the Linux-specific jail tests with root privileges
           sudo -E cargo test --test linux_integration --verbose
+
+  test-weak:
+    name: Weak Mode Integration Tests (Linux)
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+
+      - name: Cache cargo registry
+        uses: actions/cache@v3
+        with:
+          path: ~/.cargo/registry
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-registry-
+
+      - name: Cache cargo index
+        uses: actions/cache@v3
+        with:
+          path: ~/.cargo/git
+          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-git-
+
+      - name: Cache cargo build
+        uses: actions/cache@v3
+        with:
+          path: target
+          key: ${{ runner.os }}-cargo-build-weak-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-build-weak-
+
+      - name: Build
+        run: cargo build --verbose
+
+      - name: Run weak mode integration tests
+        run: cargo test --test weak_integration --verbose
 
   clippy:
     name: Clippy
