fix: Use full path to cargo when running with sudo
sudo doesn't preserve PATH by default, causing 'cargo: command not found'.
Using /Users/ammar/.cargo/bin/cargo to get the full path resolves this issue.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -118,7 +118,8 @@ jobs:
           # Ensure ip netns support is available
           sudo ip netns list || true
           # Run the Linux-specific jail tests with root privileges
-          sudo -E cargo test --test linux_integration --verbose
+          # Use full path to cargo since sudo doesn't preserve PATH
+          sudo -E $(which cargo) test --test linux_integration --verbose
 
   test-weak:
     name: Weak Mode Integration Tests (Linux)
