Add CI debugging improvements and increase test timeouts
- Add detailed error reporting for exit code propagation test
- Create certificate generation debug script for OpenSSL compatibility testing
- Increase test timeouts from 10s to 15s to handle CI load
- Add certificate debug script to CI pipeline

These changes will help diagnose:
1. macOS exit code propagation failures
2. Linux OpenSSL 3.0.13 certificate compatibility issues
3. Weak mode timeout failures in CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -79,7 +79,11 @@ jobs:
           chmod +x scripts/debug_tls_env.sh
           ./scripts/debug_tls_env.sh
           sudo ./scripts/debug_tls_env.sh
-          echo "=== End TLS Debug ==="
+          echo ""
+          echo "=== Testing Certificate Generation ==="
+          chmod +x scripts/debug_cert_generation.sh
+          ./scripts/debug_cert_generation.sh || true
+          echo "=== End Debug ==="
 
       - name: Run Linux jail integration tests (with sudo)
         run: |
