--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ hyper-rustls = "0.27.7"
 tls-parser = "0.12.2"
 camino = "1.1.11"
 filetime = "0.2"
+ctrlc = "3.4"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 nix = { version = "0.27", features = ["user"] }
