--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "httpjail"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+# Feature to enable isolated cleanup tests that should run separately in CI
+isolated-cleanup-tests = []
+
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 regex = "1.10"
