--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "httpjail"
 version = "0.1.0"
 edition = "2024"
+license = "CC0-1.0"
+description = "Monitor and restrict HTTP/HTTPS requests from processes"
+repository = "https://github.com/coder/httpjail"
+keywords = ["network", "security", "proxy", "monitoring", "sandbox"]
+categories = ["command-line-utilities", "network-programming", "development-tools"]
+
+[features]
+# Feature to enable isolated cleanup tests that should run separately in CI
+isolated-cleanup-tests = []
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
@@ -30,6 +39,8 @@ dirs = "6.0.0"
 hyper-rustls = "0.27.7"
 tls-parser = "0.12.2"
 camino = "1.1.11"
+filetime = "0.2"
+ctrlc = "3.4"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 nix = { version = "0.27", features = ["user"] }
