--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,14 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  # Run all tests first using the reusable workflow
+  tests:
+    uses: ./.github/workflows/tests.yml
+    
+  # Publish job that depends on tests passing
   publish:
     name: Publish to crates.io
+    needs: tests
     runs-on: ubuntu-latest
     environment: publish
     
@@ -43,15 +49,6 @@ jobs:
           fi
           
           echo "Version check passed!"
-      
-      - name: Run tests
-        run: cargo test --verbose
-      
-      - name: Run clippy
-        run: cargo clippy --all-targets -- -D warnings
-      
-      - name: Check formatting
-        run: cargo fmt -- --check
       
       - name: Build release
         run: cargo build --release --verbose
