--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
   publish:
     name: Publish to crates.io
     needs: tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-xlarge
     environment: publish
     
     steps:
