--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["command-line-utilities", "network-programming", "development-tool
 isolated-cleanup-tests = []
 
 [dependencies]
+async-trait = "0.1"
 clap = { version = "4.5", features = ["derive"] }
 regex = "1.10"
 tokio = { version = "1.35", features = ["full"] }
@@ -36,6 +37,7 @@ tls-parser = "0.12.2"
 camino = "1.1.11"
 filetime = "0.2"
 ctrlc = "3.4"
+url = "2.5"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 nix = { version = "0.27", features = ["user"] }
