ci: restore self-hosted linux tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Setup Rust environment and install nextest
         run: |
           source ~/.cargo/env
-          
+
           # Install nextest if not already present
           if ! command -v cargo-nextest &> /dev/null; then
             cargo install cargo-nextest --locked
@@ -135,7 +135,7 @@ jobs:
 
   test-weak:
     name: Weak Mode Integration Tests (Linux)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-8-cores
 
     steps:
       - uses: actions/checkout@v4
@@ -162,12 +162,12 @@ jobs:
       - name: Run weak mode integration tests
         run: cargo nextest run --profile ci --test weak_integration --verbose
 
-  clippy:
-    name: Clippy (${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
+    clippy:
+      name: Clippy (${{ matrix.os }})
+      runs-on: ${{ matrix.os }}
+      strategy:
+        matrix:
+          os: [ubuntu-latest-8-cores, macos-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -186,9 +186,9 @@ jobs:
       - name: Run clippy
         run: cargo clippy --all-targets -- -D warnings
 
-  fmt:
-    name: Format
-    runs-on: ubuntu-latest
+    fmt:
+      name: Format
+      runs-on: ubuntu-latest-8-cores
 
     steps:
       - uses: actions/checkout@v4
@@ -207,9 +207,9 @@ jobs:
       - name: Check formatting
         run: cargo fmt -- --check
 
-  udeps:
-    name: Unused dependency check
-    runs-on: ubuntu-latest
+    udeps:
+      name: Unused dependency check
+      runs-on: ubuntu-latest-8-cores
 
     steps:
       - uses: actions/checkout@v4
