--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,8 +40,8 @@ url = "2.5"
 v8 = "129"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-nix = { version = "0.27", features = ["user"] }
 libc = "0.2"
+atty = "0.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2"
@@ -52,6 +52,9 @@ tempfile = "3.8"
 assert_cmd = "2.0"
 predicates = "3.0"
 serial_test = "3.0"
+
+[package.metadata.cargo-udeps.ignore]
+dev = ["serial_test"]
 
 [profile.fast]
 inherits = "release"
