docs: Add debugging best practices to CLAUDE.md and clean up test
- Document preference for logging over temporary scripts
- Add example of tracing_subscriber setup for tests
- Remove debug eprintln statements now that issue is resolved
- Keep important comment about TempPath preventing 'Text file busy'

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ tempfile = "3.8"
 assert_cmd = "2.0"
 predicates = "3.0"
 serial_test = "3.0"
+ctor = "0.2"
 
 [package.metadata.cargo-udeps.ignore]
 dev = ["serial_test"]
