--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ filetime = "0.2"
 ctrlc = "3.4"
 url = "2.5"
 v8 = "129"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 simple-dns = "0.7"
 
 [target.'cfg(target_os = "macos")'.dependencies]
@@ -53,6 +55,7 @@ tempfile = "3.8"
 assert_cmd = "2.0"
 predicates = "3.0"
 serial_test = "3.0"
+ctor = "0.2"
 
 [package.metadata.cargo-udeps.ignore]
 dev = ["serial_test"]
