fix: Add -o flag to unzip command to force overwrite
The mdbook-linkcheck zip contains a README.md that was causing
an interactive prompt during CI, leading to build failures.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install mdbook-linkcheck
         run: |
           curl -sSL https://github.com/Michael-F-Bryan/mdbook-linkcheck/releases/latest/download/mdbook-linkcheck.x86_64-unknown-linux-gnu.zip -o linkcheck.zip
-          unzip -q linkcheck.zip
+          unzip -q -o linkcheck.zip
           chmod +x mdbook-linkcheck
           sudo mv mdbook-linkcheck /usr/local/bin/
           
