refactor: use tokio's async runtime for command timeouts
Replace polling-based timeout implementation with cleaner tokio approach
using block_in_place and async/await patterns.

Benefits:
- No manual polling or thread sleeping
- Leverages tokio's efficient async I/O and timers
- Automatic child process cleanup with kill_on_drop(true)
- Works correctly in both sync and async contexts
- Cleaner, more idiomatic Rust code

Technical details:
- Uses tokio::task::block_in_place when in async context
- Falls back to creating temporary runtime when needed
- Maintains backward compatibility with execute_with_timeout_poll alias
- Tests updated to use multi-threaded runtime for block_in_place

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,8 +60,7 @@ assert_cmd = "2.0"
 predicates = "3.0"
 serial_test = "3.0"
 ctor = "0.2"
-criterion = { version = "0.5", features = ["async_tokio"] }
-pprof = { version = "0.14", features = ["protobuf-codec", "criterion"] }
+tokio = { version = "1.35", features = ["full"] }
 
 [package.metadata.cargo-udeps.ignore]
 dev = ["serial_test"]
